static/css/style.css
body {
    background-color: #272638;
}

.buttons {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    border-radius: 40px;
    color: #272638;
    height: 50px;
    width: 160px;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
}

.searchButton {
    display: block;
    margin-left: 60%;
    margin-right: auto;
    margin-top: 5px;
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    border-radius: 40px;
    color: #272638;
    height: 3%;
    width: 9.5%;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
}

@font-face {
    font-family: fontBold;
    src: url(../fonts/mont/Mont-HeavyDEMO.otf);
}

@font-face {
    font-family: fontLight;
    src: url(../fonts/mont/Mont-ExtraLightDEMO.otf);
}

.Indexlogo {
    display: block;
    margin-top: 50px;
    margin-left: auto;
    margin-right: auto;
    max-width: 350px;
    max-height: 350px;
    position: relative;
}

.logo {
    display: block;
    margin-top: 5px;
    margin-left: 5px;
    margin-right: auto;
    max-width: 100px;
    max-height: 100px;
    position: relative;
}

.header {
    width: 100vw;
    height: 100px;
    background-color: #403e5b;
    margin-left: -9px;
    margin-top: -10px;
}

.nav {
    display: inline;
    color: white;
    font-weight: normal;
    font-family: fontLight;
}

.navLinks {
    position: relative;
    margin-top: -65px;
    color: white;
    text-align-last: center;
}

.welcomeHeader {
    position: relative;
    margin-top: -90px;
    color: white;
    text-align-last: center;
    font-family: fontLight;
}

.questions {
    color: white;
    text-align-last: center;
    margin-top: 35px;
}

.reviews {
    color: white;
    text-align-last: center;
    margin-top: 35px;
}

.newQuestions {
    color: white;
    text-align: left;
    align-items: center;
    margin-top: 35px;
}

.newReviews {
    color: white;
    text-align: left;
    align-items: center;
    margin-top: 35px;
}

.searchText {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 4px;
    font-family: fontLight;
}

.search {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    width: 43%;
    height: 25px;
    background-color: #272638;
    border: solid 2px white;
    color: white;
    font-family: fontLight;
}

.newQuestionWrapper {
    text-align-last: center;
}

.newQuestionWrapper label {
    text-align-last: left;
}

.body {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    background-color: #272638;
    border: solid 2px white;
    color: white;
    width: 43%;
    text-align: center;
    font-family: fontLight;
}

.postedText {
    margin-left: -40.5%;
    margin-top: 3%;
    font-family: fontLight;
}

.navCurrent {
    display: inline;
    color: white;
    font-family: fontBold;
}

.bar {
    position: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 60px;
    background-color: white;
    height: 95%;
    width: 2px;
}

.wrapper {
    height: 90vh;
}

.postButton {
    display: relative;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    border-radius: 40px;
    color: #272638;
    height: 50px;
    width: 200px;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
}

.leftSide {
    margin-top: -90vh;
    margin-left: 20%;
    color: white;
    font-family: fontLight;
    width: 30%;
}

.rightSide {
    margin-top: -80vh;
    margin-left: 55%;
    position:relative;
    color: white;
    font-family: fontLight;
}

.profilePic {
    position: relative;
    width: 90%;
    border-radius: 50%;
    margin-left: -2vw;
}

.login {
    width: 400px;
    height: 25px;
    background-color: #272638;
    border: solid 2px white;
    color: white;
    margin-top: 0px;
}

.leftSide h2 {
    margin-bottom: 0%;
}

.leftSide h2, input {
    margin-left: -5%;
}

.uploadPic {
    display: block;
    margin-left: 2%;
    margin-right: auto;
    margin-top: 1%;
    margin-bottom: 5%;
    cursor: pointer;
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    border-radius: 40px;
    color: #272638;
    height: 50px;
    width: 200px;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
}

.loginPage {
    color: white;
    font-family: fontLight;
    text-align: center;
    margin-top: 4%;
}

.loginPage p {
    text-align: center;
}

.centered {
    position: relative;
    margin-left: auto;
    margin-right: auto;
}

.centered input {
    position: relative;
    width: 300px;
    height: 25px;
    background-color: #272638;
    border: solid 2px white;
    color: white;
    margin-left: 5%;
    margin-top: 2%;
}

.required:before {
    content:"* ";
    color:red;
}

.submit {
    display: relative;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2%;
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    border-radius: 40px;
    color: #272638;
    height: 4%;
    width: 9.5%;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
}

.button {
    display: relative;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2%;
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    border-radius: 40px;
    color: #272638;
    height: 4%;
    width: 9.5%;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
}

.topic {
    position: relative;
    font-family: fontLight;
    font-size: 20px;
    float: left;
}

.asked {
    float: left;
    position: relative;
    margin-top: -3%;
}

.title {
    position: relative;
    font-family: fontBold;
    font-size: 25px;
    color: white;
    margin-bottom: -7.2%;
    float: left;
    top: -85px;
}

.title2 {
    position: relative;
    font-family: fontBold;
    font-size: 25px;
    color: white;
    margin-bottom: -7.2%;
    float: left;
    top: -55px;
}

.edit {
    font-family: fontLight;
    font-size: 20px;
    color: white;
    text-decoration: none;
}

.delete {
    display: relative;
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    border-radius: 40px;
    color: #272638;
    height: 25px;
    width: 100px;
    outline: white;
    font-family: fontBold;
    font-size: 15px;
    margin-left: 10%;
}

a {
    text-decoration: none;
    color: white;
}

.divider {
    position: relative;
    background-color: white;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    height: 1px;
}

p {
    font-family: fontLight;
    text-align: left;
}

p.body {
    position: fixed;
    float: left;
    margin-top: 5%;
}

table {
    table-layout: fixed;
}

th, td {
    width: 15%;
    overflow: hidden;
}

.leftText {
    color: white;
    text-align: left;
    font-family: fontLight;
    width: 60%;
    margin-left: auto;
    margin-right: auto;
}

.wrapper {
    position: relative;
}

.topics {
    background-color: #272638;
    border-color: white;
    border: solid 2px white;
    color: white;
    font-family: fontLight;
}

.questionSpacer {
    position: relative;
    margin-top: 20%;
}

.heading {
    margin-bottom: -10%;
}

.questionButton {
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    margin-right: 2%;
    margin-left: auto;
    border-radius: 40px;
    color: #272638;
    height: 3%;
    width: 12.5%;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
}


.reviewButton {
    display: relative;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    border-radius: 40px;
    color: #272638;
    height: 50px;
    width: 200px;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
}

.profileButton {
    display: block;
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    position: relative;
    margin-right: auto;
    margin-left: 2%;
    margin-top: 0%;
    border-radius: 40px;
    color: #272638;
    height: 3%;
    width: 12.5%;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
    height: 60px;
    width: 200px;
    cursor: pointer;
}


.buttonDiv {
    margin-left: auto;
    margin-right: auto;
}

.bodyDisplay {
    text-align-last: left;
}

.error {
    text-align: center;
}

#submit {
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    margin-right: auto;
    margin-left: auto;
    margin-top: 2%;
    border-radius: 40px;
    color: #272638;
    height: 3%;
    width: 9.5%;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
}

#password {
    position: relative;
    width: 370px;
    height: 25px;
    background-color: #272638;
    border: solid 2px white;
    color: white;
    margin-left: auto;
    margin-right: auto;
    object-position: center;
    margin-top: 2%;
    margin-left: 6.5%;
}

#email {
    position: relative;
    width: 370px;
    height: 25px;
    background-color: #272638;
    border: solid 2px white;
    color: white;
    margin-left: auto;
    margin-right: auto;
    object-position: center;
    margin-top: 2%;
    margin-left: 8.5%;
}

#name {
    position: relative;
    width: 370px;
    height: 25px;
    background-color: #272638;
    border: solid 2px white;
    color: white;
    margin-right: auto;
    object-position: center;
    margin-top: 2%;
    margin-left: 8%;
}

#confirmPassword {
    position: relative;
    width: 370px;
    height: 25px;
    background-color: #272638;
    border: solid 2px white;
    color: white;
    margin-right: auto;
    object-position: center;
    margin-top: 2%;
    margin-left: 2%;
}

.form-field label {
    padding-right: 10px;
    position: relative;
    color: white;
    font-family: fontLight;
}

.form-field {
    margin-right: 80%;
}

.form-field2 {
    margin-right: auto;
    margin-left: auto;
}

.form-field2 label {
    position: relative;
    margin-right: -5%;
    color: white;
    font-family: fontLight;
}

.form-field3 label {
    position: relative;
    color: white;
    text-align: center;
    font-family: fontLight;
}


.addAnswer {
    margin-top: -10%;
}

.subTitle {
    margin-left: auto;
    margin-right: auto;
    margin-top: -2%;
}

.welcomeHeader h1 {
    margin-top: -5px;
    padding-bottom: 0.8%;
}

.tabs {
    position: relative;   
    min-height: 200px;
    clear: both;
    margin: 25px 0;
}

  .tab {
    float: left;
  }

  .tab label {
    background: #272638; 
    padding: 10px; 
    margin-left: -1px; 
    position: relative;
    left: 1px;
  }

  .tab label:hover {
    background: #403e5b;
    padding: 10px; 
    margin-left: -1px; 
    position: relative;
    left: 1px;
  }

  .tab [type=radio] {
    display: none;   
  }

  .content {
    position: absolute;
    top: 50px;
    left: 0;
    background: inherit;
    right: 0;
    bottom: 0;
    padding: 20px;
    
  }

  .content > * {
    opacity: 0;
    transform: translateX(-100%);
    /*transition: all 0.6s ease;*/
  }

  [type=radio]:checked ~ label {
    background: inherit;
    border-bottom: 1px solid white;
    z-index: 2;
    font-family: fontBold;
  }
  
  [type=radio]:checked ~ label ~ .content {
    z-index: 1;
  }

  [type="radio"]:checked ~ label ~ .content > * {
    opacity: 1;
    transform: translateX(0);
  }

  .tab {
      font-family: fontLight;
      font-size: 25px;
  }
  
  #imgUpload {
    position: relative;
  }

  #PictureLabel {
    display: block;
    position: relative;
    background: linear-gradient(to right, #00b7ff, #ffffc7);
    position: relative;
    margin-right: auto;
    margin-left: 2%;
    margin-top: -3%;
    border-radius: 40px;
    color: #272638;
    height: 3%;
    width: 12.5%;
    outline: white;
    font-family: fontBold;
    font-size: 20px;
    height: 60px;
    width: 200px;
    cursor: pointer;
  }

